--- a/openapi/testarrayof.yml
+++ b/openapi/testarrayof.yml
@@ -2,27 +2,57 @@ openapi: 3.0.1
 info:
   title: Bookings
   version: v1.0
-  '200':
-    description: The HTTP `200 OK` success status response code indicates that the request has succeeded.
-    content:
-      application/vnd.api+json:
-        schema:
-          type: object
-          description: A list of LocationSpread entities.
-          properties:
-            links:
-              type: object
-              properties:
-                next:
-                  type: string
-                  nullable: true
-            data:
-              type: array
-              items:
-                $ref: '#/components/schemas/LocationSpreadModel'
-            included:
-              type: array
-              items:
-                anyOf:
-                  - $ref: '#/components/schemas/PeriodModel'
-                  - $ref: '#/components/schemas/LocationSpreadSpecificationModel'
+paths:
+  /bookings:
+    get:
+      summary: Get a list of bookings
+      responses:
+        '200':
+          description: The HTTP `200 OK` success status response code indicates that the request has succeeded.
+          content:
+            application/vnd.api+json:
+              schema:
+                type: object
+                description: A list of LocationSpread entities.
+                properties:
+                  links:
+                    type: object
+                    properties:
+                      next:
+                        type: string
+                        nullable: true
+                  data:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/LocationSpreadModel'
+                  included:
+                    type: array
+                    items:
+                      anyOf:
+                        - $ref: '#/components/schemas/PeriodModel'
+                        - $ref: '#/components/schemas/LocationSpreadSpecificationModel'
+components:
+  schemas:
+    LocationSpreadModel:
+      type: object
+      properties:
+        id:
+          type: string
+        name:
+          type: string
+    PeriodModel:
+      type: object
+      properties:
+        start:
+          type: string
+          format: date-time
+        end:
+          type: string
+          format: date-time
+    LocationSpreadSpecificationModel:
+      type: object
+      properties:
+        id:
+          type: string
+        description:
+          type: string
